fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ button {
     height: 5VH;
     display: inline;
 }
-#game {
+#gameBody {
     display: flex;
     flex-direction: column;
     align-items: center;
